<resources>
    <string name="app_name">Treat-Customer</string>
    <string name="ok">Ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="login_header">LoginHeader</string>
    <string name="accept_agreement">I Have Read and Accept the Agreement</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="confirm_otp_text">We have send you Code please check your\nemail or phone then add the send code</string>
    <string name="expire_in">Expires in</string>
    <string name="resend_code"><u>Resent Code</u></string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="complete_ur_info">Complete your Information</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="confirm_pin_location">Confirm Pin Location</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_booking">Booking</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_more">More</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="app_copy_right">Copyright ©Treat 2023</string>
    <string name="my_profile">My Profile</string>
    <string name="my_points">My Points</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_change_location">Change Location</string>
    <string name="language">Language</string>
    <string name="fqa">FQA</string>
    <string name="terms">Terms and Conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="share">Share</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="email">Email</string>
    <string name="whats">Whats App</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="ur_balance">Your Balance</string>
    <string name="ur_points">Your Points</string>
    <string name="last_update">Latest update</string>
    <string name="point_history">Point History</string>
    <string name="add_to_wallet">Add To Wallet</string>
    <string name="please_accept_agreement">"Please, Accept agreement to login, "</string>
    <string name="select_gender">Select Gender</string>
    <string name="invalid_phone_error_message">Invalid Phone Number</string>
    <string name="check_phone_number">Check Your Phone Messages To Verify Your Account In treat</string>
    <string name="my_account">My Account</string>
    <string name="select_gender_error">Gender is required, Please select the gender</string>
    <string name="name_error">Name is required, Please enter your name</string>
    <string name="user_profile_update_successfully">User profile updated successfully</string>
    <string name="enter_validate_birth_date">Enter valid birth date, the age is below 18</string>
    <string name="something_wrong">Something wrong, Unable to fetch FQA</string>
    <string name="past">Past</string>
    <string name="pending">Pending</string>
    <string name="upcoming">UpComing</string>
    <string name="disable_account">Disable Account</string>
    <string name="logout">Log out</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="email_validation_error">Email is invalid</string>
    <string name="points">Points</string>
    <string name="points_transfer_successfully">Points transfered Successfully</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="change_language">Change Language</string>
    <string name="location">Location</string>
    <string name="all">ALL</string>
    <string name="hair_cut">HAIR CUT</string>
    <string name="barber_shop">BARBER SHOP</string>
    <string name="spa">SPA</string>
    <string name="massage">MASSAGE</string>
    <string name="skin_care">SKIN CARE</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="avaiable_on">Available On</string>
    <string name="service_category">Service Category</string>
    <string name="search">Search</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="couple">Couple</string>
    <string name="is_added">is added to your favorite</string>
    <string name="is_removed">is removed from your favorite</string>
    <string name="branch_details">Details</string>
    <string name="about"><u>About</u></string>
    <string name="our_services">Our Services</string>
    <string name="total">Total</string>
    <string name="book">Book</string>
    <string name="send_gift">Send Gift</string>
    <string name="send">Send</string>
    <string name="login_as_guest"><u>Login as A Guest</u></string>
    <string name="title_account">Account</string>
    <string name="special">Special</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="about_branch">About</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="download_receipt">Download Receipt</string>
    <string name="status">Status</string>
    <string name="booking_date">Booking Date</string>
    <string name="appointment">Appointment</string>
    <string name="order_id">Order Id</string>
    <string name="start_time">Start Time</string>
    <string name="service">Service</string>
    <string name="discount">Discount</string>
    <string name="home">Home</string>
    <string name="show_results">Show Results</string>
    <string name="add">Add</string>
    <string name="min">min.</string>
    <string name="sar">SAR</string>
    <string name="my_booking">My Booking</string>
    <string name="not_found">No results found</string>
    <string name="not_found_text">We could not find anything based on your search\nTry verifying spelling, location and date or changing\nthe category then search again.</string>
    <string name="mark_as_read">Mark all as read</string>
    <string name="location_branch">BranchLocation</string>
    <string name="go_to_login"><u>Go to Login</u></string>
    <string name="login">Login</string>
</resources>