<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayF6"
    android:paddingHorizontal="@dimen/_20sdp"
    tools:context=".presentation.auth.otp.OTPFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:src="@drawable/logo_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbCompleteInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/complete_ur_info"
        android:textColor="@color/gray4A"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <TextView
        android:id="@+id/lbCompleteInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/confirm_otp_text"
        android:textColor="@color/gray4A"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbCompleteInfo" />

    <TextView
        android:id="@+id/lbName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/name"
        android:textColor="@color/gray4B"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/lbCompleteInfoText" />

    <FrameLayout
        android:id="@+id/frName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/curved_rectangle"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="@dimen/_5sdp"
        android:paddingVertical="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/lbName">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="start"
            android:inputType="text"
            android:hint="@string/name"
            android:imeOptions="actionDone"
            android:textColor="@color/gray77"
            android:textSize="@dimen/_11ssp"
            tools:ignore="Autofill,LabelFor"
            tools:text="John Doe" />

        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="end|center"
            android:src="@drawable/profile"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <TextView
        android:id="@+id/lbGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/gender"
        android:textColor="@color/gray4B"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/frName" />

    <FrameLayout
        android:id="@+id/frGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/curved_rectangle"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="@dimen/_5sdp"
        android:paddingVertical="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/lbGender">

        <TextView
            android:id="@+id/etGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="start"
            android:inputType="text"
            android:hint="@string/gender"
            android:layout_gravity="center_vertical"
            android:textColor="@color/gray77"
            android:textSize="@dimen/_11ssp"
            tools:ignore="Autofill,LabelFor"
            tools:text="John Doe" />

        <ImageView
            android:id="@+id/btnMenu"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="end|center"
            android:src="@drawable/arrow"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <Button
        android:id="@+id/btnConfirm"
        style="@style/Theme.TreatCustomer.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/button_background"
        android:paddingVertical="@dimen/_3sdp"
        android:text="@string/confirm"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:backgroundTint="@color/gray4B"
        app:layout_constraintBottom_toTopOf="@+id/btnBack" />

    <Button
        android:id="@+id/btnBack"
        style="@style/Theme.TreatCustomer.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_35sdp"
        android:background="@drawable/button_outline_background"
        android:paddingVertical="@dimen/_3sdp"
        android:text="@string/back"
        android:textAllCaps="true"
        android:textColor="@color/gray4B"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>