<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayF6"
    android:paddingHorizontal="@dimen/_16sdp"
    tools:context=".presentation.auth.login.LoginFragment">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_120sdp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:layout_marginTop="@dimen/_60sdp"
        android:text="@string/phone_number"
        android:textColor="@color/gray4A"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <LinearLayout
        android:id="@+id/lnPhoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbPhoneNumber"
        android:background="@drawable/curved_white_rectangle"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingVertical="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbPhoneNumber">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/saudi_arabia_" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:background="@color/grayEB" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="6"
            android:background="@null"
            android:hint="123589544"
            android:inputType="phone"
            android:textColor="@color/gray77"
            android:textSize="@dimen/_12ssp" />

        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:src="@drawable/call" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnAcceptAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnPhoneLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnPhoneLayout">

        <CheckBox
            android:id="@+id/ckAgreement"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/checkbox_background"
            android:button="@null"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            app:buttonTint="@color/green5E" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_agreement"
            android:textColor="@color/gray4A" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/Theme.TreatCustomer.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_35sdp"
        android:background="@drawable/button_background"
        android:paddingVertical="@dimen/_3sdp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:backgroundTint="@color/gray4B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnAcceptAgreement" />

    <TextView
        android:id="@+id/lbAsGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:text="@string/login_as_guest"
        android:textAllCaps="true"
        android:textColor="@color/gray4A"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>