<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayF6"
    android:paddingHorizontal="@dimen/_20sdp"
    tools:context=".presentation.main.ui.more.my_points.MyPointsFragment">

    <include
        android:id="@+id/toolBar"
        layout="@layout/menu_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/titleToolBar"
        layout="@layout/menu_title_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />

    <FrameLayout
        android:id="@+id/frPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleToolBar">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/my_points_bg"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/_2sdp"
                android:text="@string/ur_points"
                android:textColor="@color/grayEB"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/lbPointsNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/_2sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_19ssp"
                android:textStyle="bold"
                tools:text="500 Points" />

            <TextView
                android:id="@+id/lbLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/_2sdp"
                android:text="@string/last_update"
                android:textColor="@color/grayEB"
                android:textSize="@dimen/_12ssp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:src="@drawable/bx_coin_points"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <TextView
        android:id="@+id/lbPointHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:padding="@dimen/_2sdp"
        android:text="@string/point_history"
        android:textColor="@color/black"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frPoints" />

    <TextView
        android:id="@+id/lbResultCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:padding="@dimen/_2sdp"
        android:text="5 Results"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frPoints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPoints"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/point_row"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddToWallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbPointHistory" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddToWallet"
        style="@style/Theme.TreatCustomer.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_28sdp"
        android:background="@drawable/button_background"
        android:paddingVertical="@dimen/_3sdp"
        android:text="@string/add_to_wallet"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:backgroundTint="@color/gray4B"
        app:icon="@drawable/bx_plus"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>